<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Movie Locker Alpha</string>
    <string name="action_settings">Settings</string>
    
	<string name="genre_list_title">Genres</string>
	<string name="genre_title">Genre</string>
	<string name="genre_name_text">Name</string>
	<string name="genre_edit_movies">Movies</string>
	
	<string name="collection_list_title">Collections</string>
	<string name="collection_title">Collection</string>
	<string name="collection_name_text">Collection Name</string>
	<string name="collection_edit_members_text">Movies</string>
	
	<string name="movie_list_title">Movies</string>
	<string name="movie_title">Movie</string>
    
    <string name="menu_text_new">New</string>
    <string name="menu_text_save">Save</string>
    <string name="menu_text_done">Done</string> 
    <string name="menu_delete_text">Delete</string>
    <string name="menu_edit_text">Edit</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_select_all">Select All</string>
    <string name="menu_select_none">Select None</string>
    <string name="menu_clear_filter">Clear</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_picture">Picture</string>
    
    <string name="movie_name_text">Name</string>
    <string name="movie_description_text">Description</string>
    <string name="movie_price_text">Price</string>
    <string name="movie_genre_text">Genre</string>
    <string name="movie_barcode_text">Barcode</string>
    <string name="movie_radio_owned_text">Owned</string>
    <string name="movie_radio_wish_text">Wish List</string>
    <string name="movie_edit_collections">Collections</string>
    
    <string name="barcode_scan_text">Scan Barcode</string>
    
    <string name="movie_filter_movie_name">Movie Name</string>
    <string name="movie_filter_select_collections">Collections</string>
    <string name="movie_filter_select_genres">Genres</string>
    <string name="movie_filter_owned">Owned</string>
    <string name="movie_filter_wish_list">Wish List</string>

</resources>
