<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
       
	<item android:id="@+id/menu_clear"
        android:icon="@android:drawable/ic_notification_clear_all"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_clear_filter" />
        
	<item android:id="@+id/menu_add" 
        android:icon="@android:drawable/ic_menu_add"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_text_new" />
    
    <item android:id="@+id/menu_save" 
        android:icon="@android:drawable/ic_menu_save"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_text_save" />
    
    <item android:id="@+id/menu_done"
        android:icon="@drawable/ic_action_accept"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_text_done" />
    
    <item android:id="@+id/menu_filter"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_filter" />
    
</menu>
